--- a/.github/workflows/abi-release.yml
+++ b/.github/workflows/abi-release.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Publish ABIs to GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
-        uses: ncipollo/release-action@v1
+        uses: actions/upload-artifact@v6
         with:
           tag: ${{ github.ref_name }}
           artifacts: abis/**
