--- a/.github/workflows/abi-release.yml
+++ b/.github/workflows/abi-release.yml
@@ -34,5 +34,5 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: actions/upload-artifact@v6
         with:
-          tag: ${{ github.ref_name }}
-          artifacts: abis/**
+          name: abis-${{ github.ref_name }}
+          path: abis/**
